# hl_mai

./: CMakeLists.txt  README.md
cmake/: FindMySQL.cmake
lab_00/: README.md  components.md
lab_01/: CMakeLists.txt  docker-compose.yml
lab_01/database/: config.cpp  config.h  database.cpp  database.h  user.cpp  user.h
lab_01/database/scripts/: creation.sql  insertion.sql
lab_01/other_server/: Dockerfile
lab_01/other_server/handlers/: other_handler.h
lab_01/utilities/: identity.h  substr_check.h
lab_01/web_server/: Dockerfile  http_request_factory.h  http_web_server.h  index.yaml
lab_01/web_server/handlers/: user_handler.h
labs/: CMakeLists.txt
labs/lab_00/: components.md  context.md  task.md
labs/lab_01/: CMakeLists.txt  README.md  authorization_service.sh  docker-compose.yml  group_chat_service.sh  other_service.sh  other_start.sh  p2p_chat_service.sh  web_start.sh
labs/lab_01/other_server/: Dockerfile  http_other_request_factory.h  index.yaml  main.cpp
labs/lab_01/other_server/handlers/: other_handler.h
labs/lab_01/service/authorization_service/: Dockerfile  authorization_handler.h  http_authorization_request_factory.h  index.yaml
labs/lab_01/service/group_chat_service/: Dockerfile  group_chat_handler.h  group_chat_service.cpp  http_group_chat_request_factory.h  index.yaml
labs/lab_01/service/other_service/: Dockerfile  http_other_request_factory.h  index.yaml  other_handler.h  other_service.cpp
labs/lab_01/service/p2p_chat_service/: Dockerfile  http_p2p_chat_request_factory.h  index.yaml  p2p_chat_handler.h  p2p_chat_service.cpp
labs/lab_01/web_server/: Dockerfile  http_request_factory.h  http_web_server.h  main.cpp
labs/lab_02/: CMakeLists.txt  docker-compose.yml  web_start.sh
labs/lab_02/authorization_service/: Dockerfile  authorization_handler.h  http_authorization_request_factory.h
labs/lab_02/mysql/: Dockerfile
labs/lab_02/proxysql/: proxysql.cnf
labs/lab_02/scripts/: creation.sql  selection.sql
labs/lab_02/web_server/: Dockerfile  http_request_factory.h  http_web_server.h
labs/lab_02/web_server/handlers/: user_handler.h  web_page_handler.h
labs/lab_03/: CMakeLists.txt  authorization_service.sh  docker-compose.yml  web_start.sh
labs/lab_03/authorization_service/: Dockerfile  authorization_handler.h  authorization_service.cpp  index.yaml
labs/lab_03/other_server/: http_other_server.h
labs/lab_03/other_server/handlers/: other_handler.h
labs/lab_03/scripts/: insertion.sql
labs/lab_03/web_server/: http_web_server.h
labs/lab_03/web_server/handlers/: user_handler.h
labs/lab_04/: CMakeLists.txt  docker-compose.yml
labs/lab_04/proxysql/: Dockerfile  proxysql.cnf
labs/lab_04/web_server/: Dockerfile
labs/lab_04/web_server/handlers/: message_handler.h  user_handler.h
